--- a/Quartz-demo2/src/main/resources/application.properties
+++ b/Quartz-demo2/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Quartz-demo2
+
+#===== PostgreSQL 連線資訊 =====
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Quartz 設定
+spring.quartz.job-store-type=memory
+spring.quartz.thread-count=1
+
+
