--- a/Quartz-demo2/pom.xml
+++ b/Quartz-demo2/pom.xml
@@ -72,6 +72,21 @@
 			<version>3.0.4</version>
 			<scope>test</scope>
 		</dependency>
+		  <!-- WebClient 用於呼叫 REST API -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-webflux</artifactId>
+	    </dependency>
+
+	    <!-- 日誌 -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-logging</artifactId>
+	    </dependency>
+	    <dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+  			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
