remove dockerfile and docker-compose

--- a/Quartz-demo2/pom.xml
+++ b/Quartz-demo2/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>Quartz-demo2</groupId>
 	<artifactId>Quartz-demo2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>Quartz-demo2</name>
 	<description>Quartz-demo2</description>
 	<url/>
@@ -56,11 +56,7 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
