remove controller and change entity name to WeatherBean

--- a/Quartz-demo2/src/main/resources/application.properties
+++ b/Quartz-demo2/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.password=0000
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Quartz 設定
+# 把排程執行相關的「排程元資料」存進記憶體
 spring.quartz.job-store-type=memory
-spring.quartz.thread-count=1
+# 執行緒數量
+spring.quartz.thread-count=3
